mise à jour gestionContenu